apps/site/content/docs/v4/advanced.mdx
---
title: "Advanced"
---

## Page wrapping

Semantically, the `<Page />` component represents a single page in the rendered document. However, there are scenarios in which you would expect to have page breaks whenever the page contents exceed their limits, specially when handling big chunks of text. After all, PDFs are paged documents. React-pdf has a built-in wrapping engine that is enabled by default, so you can start creating paged documents right out of the box. If that's not what you need, you can disable this very easily by doing:

```jsx
import { Document, Page } from '@react-pdf/renderer'

const doc = () => (
  <Document>
    <Page wrap={false}>
      // something pretty here
    </Page>
  </Document>
);
```

<GoToExample name="page-wrap" />

### Breakable vs. unbreakable components

We can identify two different types of components based on how they wrap:

- `Breakable components` try to fill up the remaining space before jumping into a new page. By default, this group is composed by _View_, _Text_ and _Link_ components
- `Unbreakable components` are indivisible, therefore if there isn't enough space for them they just get rendered in the following page. In this group by default we only find _Image_.

<GoToExample name="breakable-unbreakable" />

### Disabling component wrapping

React-pdf also enables you to transform _breakable_ elements into their opposite, forcing them to always render in a new page. This can be done by simply setting the prop `wrap={false}` to any valid component:

```jsx
import { Document, Page, View } from '@react-pdf/renderer'

const doc = () => (
  <Document>
    <Page wrap>
      <View wrap={false}>
        // fancy things here
      </View>
    </Page>
  </Document>
);
```

Now, if the `<View />` component happens to be at the bottom of the page without enough space, it will be rendered in a new page as it would be _unbreakable_.

<GoToExample name="disable-wrapping" />

### Page breaks

Page breaks are useful for separating concerns inside the document, or ensuring that a certain element will always show up on the top of the page.

Adding page breaks in react-pdf is very simple: all you have to do is add the `break` prop to any primitive. This will force the wrapping algorithm to start a new page when rendering that element.

```jsx
import { Document, Page, Text } from '@react-pdf/renderer'

const doc = () => (
  <Document>
    <Page wrap>
      <Text break>
        // fancy things here
      </Text>
    </Page>
  </Document>
);
```

<GoToExample name="page-breaks" />

### Fixed components

There is still another scenario we didn't talk about yet: what if you want to wrap pages but also be able to render a component on _all_ pages? This is where the `fixed` prop comes into play.

```jsx
import { Document, Page, View } from '@react-pdf/renderer'

const doc = () => (
  <Document>
    <Page wrap>
      <View fixed>
        // fancy things here
      </View>
    </Page>
  </Document>
);
```

Just by that, the `<View />` component will be placed repeatedly throughout all pages.

> **Protip:** This feature can be very handy for creating nice headers, footers or page numbers, among other use cases. You can even absolutely position fixed elements on your page to create more complex layouts!

<GoToExample name="fixed-components" />

---
## Document Navigation

There are two main ways to make a document navigable:

### Destinations `v2.0.0`

Destinations are the simplest form of navigation. They allow to create interactive links that take the user directly to the defined place within the document.

A destination can be created by setting the `id` prop to a _String_ on any supported element ([see more](/docs/v4/components)). After that, the destination can be linked to by setting the `src` prop on the `<Link />` element to the same _String_, but with the leading hash (`#`) symbol:

```js
import { Document, Link, Page, Text } from '@react-pdf/renderer'

const doc = () => (
  <Document>
    <Page>
      <Link src='#Footnote'> // Notice the hash symbol
        Click me to get to the footnote
      </Link>

      // Other content here

      <Text id='Footnote'> // No hash symbol
        You are here because you clicked the link above
      </Text>
    </Page>
  </Document>
);
```

### Bookmarks `v2.2.0`

Bookmarks allow the user to navigate interactively from one part of the document to another. They form a tree-structured hierarchy of items, which serve as a visual table of contents to display the document’s structure to the user.

A bookmark can be defined by the `bookmark` prop on any of the supported components ([see more](/docs/v4/components)), and can take the form of either a _String_ or a _Bookmark_ type

```js
import { Document, Page, Text } from '@react-pdf/renderer'

const doc = () => (
  <Document>
    <Page bookmark="Harry Potter and the Philosopher's Stone">
     <Text bookmark={{ title: "Chapter 1: The Boy Who Lived", fit: true }}>{...}</Text>
    </Page>
  </Document>
);
```

The example above will create a table of content of 2 nested items: The parent will be the book's name, and the child the chapter's name. You can nest as many bookmarks as you want.

Note that some older PDF viewers may not support bookmarks.

#### Bookmark type

Object that matches the following schema:

| Value                 |                                     Description                                     |      Type |
|-----------------------|:-----------------------------------------------------------------------------------:|----------:|
| title                 |                                   Bookmark value                                    |  _String_ |
| top _(Optional)_      |  Y coodinate from the document top edge where user get's redirected. Defaults to 0  |  _Number_ |
| left _(Optional)_     |  X coodinate from the document top edge where user get's redirected. Defaults to 0  |  _Number_ |
| zoom _(Optional)_     |                  Reader zoom value after clicking on the bookmark                   |  _Number_ |
| fit _(Optional)_      |                       Redirect user to the start of the page                        | _Boolean_ |
| expanded _(Optional)_ | Viewer should expand tree node in table of contents (not supported in some viewers) | _Boolean_ |

---
## On the fly rendering `Web only`

There are some cases in which you may need to generate a document without showing it on screen. For those scenarios, react-pdf provides three different solutions:

### Download link

Is it possible that what you need is just a "Download" button. If that's the case, you can use `<PDFDownloadLink />` to easily create and download your document.

```jsx
import { PDFDownloadLink, Document, Page } from '@react-pdf/renderer';

const MyDoc = () => (
  <Document>
    <Page>
      // My document data
    </Page>
  </Document>
);

const App = () => (
  <div>
    <PDFDownloadLink document={<MyDoc />} fileName="somename.pdf">
      {({ blob, url, loading, error }) =>
        loading ? 'Loading document...' : 'Download now!'
      }
    </PDFDownloadLink>
  </div>
);
```

> **Protip:** You still have access to blob's data if you need it.

### Access blob data

However, react-pdf does not stick to just download the document but also enables direct access to the document's blob data for any other possible use case. All you have to do is make use of `<BlobProvider />`.

```jsx
import { BlobProvider, Document, Page } from '@react-pdf/renderer';

const MyDoc = (
  <Document>
    <Page>
      // My document data
    </Page>
  </Document>
);

const App = () => (
  <div>
    <BlobProvider document={MyDoc}>
      {({ blob, url, loading, error }) => {
        // Do whatever you need with blob here
        return <div>There's something going on on the fly</div>;
      }}
    </BlobProvider>
  </div>
);
```

You can also obtain the blob data imperatively, which may be useful if you are using react-pdf on a non-React frontend (web only).

```jsx
import { pdf, Document, Page } from '@react-pdf/renderer';

const MyDoc = (
  <Document>
    <Page>
      // My document data
    </Page>
  </Document>
);

const blob = pdf(MyDoc).toBlob();
```

### Using the usePDF hook

React-pdf now ships a hook API that will give you direct access to the document data (such as blob or url state) as well as with an _update_ function to trigger document re-rendering. Since document re-computation can be an expensive operation, this hook is perfect solution for those cases in where you need a fine control over when this happens.

```js
import { usePDF, Document, Page } from '@react-pdf/renderer';

const MyDoc = (
  <Document>
    <Page>
      // My document data
    </Page>
  </Document>
);

const App = () => {
  const [instance, updateInstance] = usePDF({ document: MyDoc });

  if (instance.loading) return <div>Loading ...</div>;

  if (instance.error) return <div>Something went wrong: {instance.error}</div>;

  return (
    <a href={instance.url} download="test.pdf">
      Download
    </a>
  );
}
```

> **Protip:** You still have access to blob's data inside `instance.blob` if you need it

---
## Orphan & widow protection

When you layout text, orphans and widows can make the difference between a _good_ document and a _great_ one. That's why react-pdf has a built-in orphan and widow protection that you can use right out of the box.

But react-pdf does not reserve this protection just for text. You can adjust this protection to your convenience by just setting some props to **any react-pdf primitive**:

| Prop name             |                                                     Description                                                      |      Type | Default |
| --------------------- | :------------------------------------------------------------------------------------------------------------------: | --------: | ------: |
| minPresenceAhead      |     Hint that no page wrapping should occur between all sibling elements following the element within _n_ points     | _Integer_ |       0 |
| orphans _(text only)_ | Specifies the minimum number of lines in a text element that must be shown at the bottom of a page or its container. | _Integer_ |       2 |
| widows _(text only)_  |  Specifies the minimum number of lines in a text element that must be shown at the top of a page or its container.   | _Integer_ |       2 |

> **Protip:** You can use this API to ensure that headings do not get rendered at the bottom of a page

<GoToExample name="orphans-and-widows" />

---
## Floats

react-pdf supports CSS floats. A floated element is taken out of the normal flow and pinned to one side of its container, with the surrounding text wrapping around it. This is the tool for drop caps, figures with captions, pull quotes and other article-style layouts.

Set `float` to `left` or `right` on any View or Image, and place the wrapping text as its sibling:

```jsx
import React from 'react';
import { Page, Text, View, Image, Document } from '@react-pdf/renderer';

const MyDocument = () => (
  <Document>
    <Page size="A4" style={{ padding: 40, fontSize: 12 }}>
      <View style={{ float: 'right', width: 150, marginLeft: 10 }}>
        <Image src="/my-image.jpg" style={{ width: 150 }} />
      </View>
      <Text>
        This text wraps along the left side of the image, and recovers the
        full width of the page once past its bottom edge...
      </Text>
    </Page>
  </Document>
);
```

A float only affects the lines that overlap it vertically, and margins on the floated element define the gap between it and the text. Anything nested inside the floated element (a caption, for instance) travels with it and takes no part in the wrapping.

> **Protip:** Text wrapping is resolved at layout time, so react-pdf may measure a wrapping paragraph shorter than it ends up being. If content below overlaps it, reserve the real height on the wrapping container with `minHeight`

### Clear

The `clear` property moves an element below preceding floats, just like in CSS. Valid values are `left`, `right`, `both` and `none` _(default)_:

```jsx
<View style={{ float: 'left', width: 80, height: 80 }} />
<Text>This text wraps around the float</Text>
<Text style={{ clear: 'left' }}>This text starts below it</Text>
```

### Shape outside

By default text wraps around the float's rectangular box. The `shapeOutside` property replaces that rectangle with a CSS basic shape — `circle()`, `ellipse()`, `polygon()` or `inset()` — and text wraps along it instead:

```jsx
<View
  style={{
    float: 'left',
    width: 100,
    height: 100,
    shapeOutside: 'circle(50%)',
  }}
>
  <Svg width={100} height={100}>
    <Circle cx={50} cy={50} r={50} fill="tomato" />
  </Svg>
</View>
<Text>This text creeps in toward the circle, line by line...</Text>
```

Shape coordinates and radii accept the same units and percentages as CSS, resolved against the float's box.

<GoToExample name="float" />

---
## Dynamic content

With react-pdf, now it is possible to render dynamic text based on the context in which a certain element is being rendered. All you have to do is to pass a function to the `render` prop of the `<Text />` or `<View />` component. The result will be rendered inside the text block as a child.

```jsx
import { Document, Page } from '@react-pdf/renderer'

const doc = () => (
  <Document>
    <Page wrap>
      <Text render={({ pageNumber, totalPages }) => (
        `${pageNumber} / ${totalPages}`
      )} fixed />

      <View render={({ pageNumber }) => (
        pageNumber % 2 === 0 && (
          <View style={{ background: 'red' }}>
            <Text>I'm only visible in odd pages!</Text>
          </View>
        )
      )} />
    </Page>
  </Document>
);
```

### Available arguments

| Name                          |                 Description                 |      Type |
| ----------------------        | :-----------------------------------------: | --------: |
| pageNumber                    |             Current page number             | _Integer_ |
| totalPages `Text only`        | Total amount of pages in the final document | _Integer_ |
| subPageNumber                 | Current subpage in the Page component       | _Integer_ |
| subPageTotalPages `Text only` | Total amount of pages in the Page component | _Integer_ |

Bear in mind that the `render` function is called twice for `<Text />` elements: once for layout on the page wrapping process, and another one after it's know how many pages the document will have.

> **Protip:** Use this API in conjunction with fixed elements to render page number indicators

<GoToExample name="page-numbers" />

---
## Debugging

React-pdf ships a built-in debugging system you can use whenever you have doubts about how elements are being laid out on the page. All you have to do is to set the `debug` prop to `true` on any valid primitive (except _Document_) and re-render the document to see the result on the screen.

<DebugSample />

<GoToExample name="debugging" />

---
## Hyphenation

Hyphenation refers to the automated process of breaking words between lines to create a better visual consistency across a text block. This is a complex problem. It involves knowing about the language of the text, available space, ligatures, among other things.

React-pdf internally implements the [Knuth and Plass line breaking algorithm](http://www.eprg.org/G53DOC/pdfs/knuth-plass-breaking.pdf) that produces the minimum amount of lines without compromising text legibility. By default it's setup to hyphenate english words.

### Other languages

Words are split with [@react-pdf/hyphenate](https://github.com/diegomura/react-pdf/tree/master/packages/hyphenate), a fast Liang hyphenation engine with an entry point per language, `en-us` being the default. To hyphenate another language, register its `syllables` function:

```jsx
import { Font } from '@react-pdf/renderer';
import { syllables } from '@react-pdf/hyphenate/de';

Font.registerHyphenationCallback(syllables);
```

Every language shipped by [hyphen](https://github.com/ytiurin/hyphen) is available under the same name (`de`, `es`, `fr`, `ru`, `zh-latn-pinyin`, and 80+ more). Each language is its own entry point, so bundlers only include the patterns you actually import.

### Custom callback

If you need more fine-grained control over how words break, you can pass your own callback and handle all that logic by yourself:

```jsx
import { Font } from '@react-pdf/renderer'

const hyphenationCallback = (word) => {
  // Return word syllables in an array
}

Font.registerHyphenationCallback(hyphenationCallback);
```

> **Protip:** If you don't want to hyphenate words at all, just provide a callback that returns the same words it receives. More information [here](/docs/v4/fonts#registerhyphenationcallback)

<GoToExample name="hyphenation-callback" />
## Usage with Express.js `node only`

```jsx
import React from 'react';
import ReactPDF from '@react-pdf/renderer';

const pdfStream = await ReactPDF.renderToStream(<MyDocument />);
res.setHeader('Content-Type', 'application/pdf');
pdfStream.pipe(res);
pdfStream.on('end', () => console.log('Done streaming, response sent.'));
```
## Rendering large documents in the browser

If you need to render documents with 30 pages or more in the browser, using react-pdf directly in React can occupy the browser's main thread for a long time.
This can lead to unresponsive UI and browsers offering the user to abort the script.
To avoid this, you should render large documents inside a web worker.
Web workers are executed in separate threads, and therefore do not block the main thread of the browser.
This way, the UI can stay responsive while the PDF is being rendered.
For an example on how to run react-pdf in a web worker, see this [blog post](https://dev.to/simonhessel/creating-pdf-files-without-slowing-down-your-app-a42).
## Math expressions

React-pdf supports rendering LaTeX mathematical expressions via the `@react-pdf/math` package. It converts LaTeX notation into vector graphics (SVG paths), so all glyphs are fully embedded in the PDF without external fonts or assets.

### Installation

```bash
npm install @react-pdf/math
```

### Usage

```jsx
import { Document, Page, Text, View } from '@react-pdf/renderer';
import { Math } from '@react-pdf/math';

const MyDocument = () => (
  <Document>
    <Page size="A4" style={{ padding: 40 }}>
      <Math>{"x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a}"}</Math>
    </Page>
  </Document>
);
```

### Inline mode

By default, expressions render in display mode (centered, larger). Set `inline` to render compact equations suitable for embedding alongside text:

```jsx
<View style={{ flexDirection: 'row', alignItems: 'center' }}>
  <Text>The equation </Text>
  <Math inline height={12}>{"E = mc^2"}</Math>
  <Text> is famous.</Text>
</View>
```

<GoToExample name="math" />

### Valid props

| Prop name |                                 Description                                 |               Type |     Default |
|-----------|:---------------------------------------------------------------------------:|-------------------:|------------:|
| children  |                   LaTeX math expression to render                           |           _String_ | _undefined_ |
| inline    | Inline mode (compact) vs display mode (centered, larger)                    |          _Boolean_ |     _false_ |
| width     | Width of the rendered expression. Auto-calculated from aspect ratio if omitted | _Number_, _String_ | _undefined_ |
| height    | Height of the rendered expression. Defaults to 22 if omitted                | _Number_, _String_ |        _22_ |
| color     |                   Color of the math expression                              |           _String_ |   _"black"_ |
| debug     | Enables debug mode showing a border around the expression                   |          _Boolean_ |     _false_ |

### Supported LaTeX features

All standard LaTeX math features supported by MathJax are available, including:

- Fractions, roots, and arithmetic operators
- Greek and Hebrew letters
- Summations, products, and integrals
- Limits and derivatives
- Matrices and arrays
- Binomial coefficients
- Trigonometric functions
- Accents and decorations
- Piecewise functions and aligned equations

---
